<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lbl_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/text_display_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/text_headline"
            app:layout_constraintEnd_toEndOf="@id/lbl_sp"
            app:layout_constraintStart_toEndOf="@id/lbl_sp"
            app:layout_constraintTop_toBottomOf="@id/lbl_sp" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pb_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>